# Polyclinic-DRF

./: .env.example  .gitignore  Makefile  docker-compose.yml  manage.py  pyproject.toml
Doctor/: models.py
Doctor/tests/: test_models.py
Patient/: models.py  serializers.py  tests.py  urls.py
Patient/tests/: test_models.py
Polyclinic/: asgi.py  settings.py  urls.py  wsgi.py
env_file/: .env.app.example
