[tool.poetry]
name = "polyclinic-drf"
version = "0.1.0"
description = ""
authors = ["Serhii <lerojserg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
python-dotenv = "^1.0.1"
drf-spectacular = "^0.27.2"
django-secured-fields = "^0.4.4"
psycopg2-binary = "^2.9.10"
djoser = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
